1 November 2007
+ Added enableAdminMode function to menu. Called statically.

18 October 2007
+ Bug #1814628 : Menu will only add a home link on new menus, not
  updated ones. 
  
10 October 2007
+ All links without parents were opening when on the home page.
  Changed code to prevent it.

Version 1.4.2
----------------------------------------------------------------
29 September 2007
+ Added option to menu list to reindex link order
+ Deleting a link didn't fix link order

27 September 2007
+ Increased popup height.

19 September 2007
+ Added option for the admin mode link to be in miniadmin instead of
  under the menu.
+ Added option to automatically add a Home link to a new menu.
+ Added loadClass functions
+ Updated: templates/admin/settings.tpl

Version 1.4.1
----------------------------------------------------------------
18 September 2007
+ Error check added to Menu_Item.php
+ Added empty message to menu list

15 September 2007
+ Fixed edit link using "Create" as a title.
+ Edit window now resizes from small popup window.

14 September 2007
+ Maximum link size is now set in Menu's settings tab
+ Home links will now expand.
+ Updated files: templates/admin/settings.tpl

Version 1.4.0
-----------------------------------------------------------------
11 September 2007
+ Fixed bug with apostrophed link titles.

27 August 2007
+ Rewrote menu templating.
  o Each menu template is now in its own directory along with its link
    and style
  o Added a horizontal menu as example.
  o Removed basic.tpl and links directory.
  o Menu template can indicate whether it is always open or if it
    collapses (show_all variable)

+ changed style a little for new menu layout
+ added style for menu popup link to make sure it stands out
+ Updated: templates/menu_layout/basic/
           templates/menu_layout/horizontal/
           (copy to local on update)
           conf/error.php


Version 1.3.1 -- 25 July 2007
-----------------------------------------------------------------